@@ -2,6 +2,8 @@ Revision history for Run-Parts
 
 0.04    TODO
 
+        New method concat.
+
         Run::Parts::Perl now works properly on DOS-ish platforms
 
 0.03    Fri Jul  5 21:01:59 CEST 2013
